[package]
name = "cyrial_helloworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https: //doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.9.2"
spl-token = "3.2.0"
solana-sdk = "1.9.2"

[dev-dependencies]
solana-program-test = "=1.9.2"
solana-sdk = "1.9.2"
spl-token = "3.2.0"


[lib]
name = "cyrial_helloworld"
crate-type = ["cdylib", "lib"]
